# steve-spectrum

./: FirstSpectrum.py  README.md  mypy.ini  setup.cfg
.github/workflows/: ci.yml
stevespectrum/: __init__.py  plots.py
stevespectrum/plots/: base.py  elevation.py  paper.py  wavelength.py
