[metadata]
name = stevespectrum
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/steve-spectrum
description = Analyze STEVE spectrography
keywords =
  aurora
  steve
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
scripts =
  FirstSpectrum.py
install_requires =
  numpy
  xarray
  matplotlib

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
